[package]
name = "ua-cloner"
version = "0.1.0"
authors = ["Colin Davis <colin.davis@urbanairship.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.9.20", features = ["rustls-tls"] }
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"
