[package]
name = "ua-cloner"
version = "0.1.0"
authors = ["Colin Davis <colin.davis@urbanairship.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"

[dependencies.reqwest]
version = "0.9.20"
default-features = false
features = ["rustls-tls"]